feat(i18n): add reference implementation for settings

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,9 @@
 {
   "meta": {
     "description": "Self-proclaimed most annoying website on the web with so many disgusting features of modern websites you might even vomit at some point."
+  },
+  "response": {
+    "yes": "Yes",
+    "no": "No"
   }
 }
