feat(page-title): proper experience config and translation tweaks across the site (#16)
* feat(page-title): make toggles into state and settings page

* chore(page-title): add main page titles to improve seo lol

* feat(page-title): move title experiment translation into localisation file

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,6 @@
 {
   "meta": {
+    "title": "The Most Annoying Website",
     "description": "Self-proclaimed most annoying website on the web with so many disgusting features of modern websites you might even vomit at some point.",
     "recruiting": "The content of this page is absolutely free for everyone. Heck, you can even access the source code on <linkTag>GitHub</linkTag>. And... You know what? You can even contribute your of stuff as well."
   },
@@ -11,6 +12,11 @@
     "home": "Home",
     "hotThings": "Hot things",
     "contact": "Contact",
-    "privacyPolicy": "Privacy Policy"
+    "privacyPolicy": "Privacy Policy",
+    "settings": "Settings"
+  },
+  "experiences": {
+    "marquee_variants": ["📣 Come back please 🏃‍♀️🏃 We have candy!! 🚐"],
+    "array_paged_variants": ["⭐️ HEY YOU 🫵", "😜 YES YOU 😱", "📣 COME BACK 🏃"]
   }
 }
