--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,7 +13,8 @@
     "cancel": "Cancel",
     "accept": "Accept",
     "close": "Close",
-    "ok": "OK"
+    "ok": "OK",
+    "send": "Send"
   },
   "status": {
     "unknown": "Unknown",
@@ -29,10 +30,6 @@
   "experiences": {
     "marquee_variants": ["📣 Come back please 🏃‍♀️🏃 We have candy!! 🚐"],
     "array_paged_variants": ["⭐️ HEY YOU 🫵", "😜 YES YOU 😱", "📣 COME BACK 🏃"],
-    "notification_permission_manual": {
-      "title": "You can manually change the notification permission up here",
-      "description": "We would like to send you notifications sometimes, could you be so kind to allow us to do so? 🙏🥺🙏"
-    },
     "exit_prompt": "I'd reconsider leaving before some bad things happend to you. Are you sure?"
   }
 }
