chore(i18n): extract even more inline hardcoded translations

--- a/public/locales/en/chat_bubble.json
+++ b/public/locales/en/chat_bubble.json
@@ -1,5 +1,5 @@
 {
-  "message_initial": "Hello! I am a chat bubble. I am here to help you. 🤓",
+  "messageInitial": "Hello! I am a chat bubble. I am here to help you. 🤓",
   "messages": [
     "Come on, let me help you!",
     "I can't hear you! Speak louder!",
@@ -11,11 +11,11 @@
     "My messages must be on a ghosting spree. Feeling ignored.",
     "Ah, the sweet sound of silence. My messages must be enjoying their newfound solitude."
   ],
-  "message_fallback": "It's nothing, leave me alone. 😤",
-  "new_alert": "New message from Chat Bubble! 🎉",
-  "hud_title": "Chat with a \"100% real huuman\"",
-  "hud_title_disclaimer": "Disclaimer: Actually, this is a bot that almost feels like a real human (not a smart one) but it's still just a bot",
-  "agent_is_typing": "Agent is typing",
-  "your_message": "Your message",
-  "your_message_placeholder": "Type here..."
+  "messageFallback": "It's nothing, leave me alone. 😤",
+  "newAlert": "New message from Chat Bubble! 🎉",
+  "hudTitle": "Chat with a \"100% real huuman\"",
+  "hudTitleDisclaimer": "Disclaimer: Actually, this is a bot that almost feels like a real human (not a smart one) but it's still just a bot",
+  "agentIsTyping": "Agent is typing",
+  "yourMessage": "Your message",
+  "yourMessagePlaceholder": "Type here..."
 }
