--- a/public/locales/en/notifications.json
+++ b/public/locales/en/notifications.json
@@ -1,5 +1,5 @@
 {
-  "enable_manual_modal": {
+  "enableManualModal": {
     "title": "You can manually change the notification permission up here",
     "description": "We would like to send you notifications sometimes, could you be so kind to allow us to do so? 🙏🥺🙏"
   }
