feat(auth): add registration form checkpoint splitting large form component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -35,7 +35,7 @@
   },
   "shareModal": {
     "title": "Share this page",
-    "description":"Spread the misery! Be sure to inflict this painfully obnoxious website on your friends too — why suffer alone when you can drag them down with you?"
+    "description": "Spread the misery! Be sure to inflict this painfully obnoxious website on your friends too — why suffer alone when you can drag them down with you?"
   },
   "themeSwitch": {
     "label": "Switch theme",
@@ -52,11 +52,14 @@
     "consentPrivacyPolicy": "Accept privacy policy",
     "countryCode": "Country",
     "createMyAccount": "Create my account",
+    "dateOfBirth": "Date of birth",
     "email": "Email",
     "firstName": "First name",
     "forgotPassword": "Forgot password?",
+    "gender": "Gender",
     "lastName": "Last name",
     "loginError": "Login failed",
+    "nickname": "Nickname",
     "password": "Password",
     "passwordConfirmation": "Password confirmation",
     "passwordReminderError": "Password reminder failed",
@@ -68,8 +71,14 @@
     "username": "Username"
   },
   "experiences": {
-    "marqueeVariants": ["📣 Come back please 🏃‍♀️🏃 We have candy!! 🚐"],
-    "arrayPagedVariants": ["⭐️ HEY YOU 🫵", "😜 YES YOU 😱", "📣 COME BACK 🏃"],
+    "marqueeVariants": [
+      "📣 Come back please 🏃‍♀️🏃 We have candy!! 🚐"
+    ],
+    "arrayPagedVariants": [
+      "⭐️ HEY YOU 🫵",
+      "😜 YES YOU 😱",
+      "📣 COME BACK 🏃"
+    ],
     "exitPrompt": "I'd reconsider leaving before some bad things happend to you. Are you sure?"
   },
   "validation": {
@@ -97,10 +106,36 @@
       "missingNumber": "Must contain at least one number",
       "missingSpecialCharacter": "Must contain at least one symbol",
       "sumOfNumbersGte": "Sum of numbers must be at least or equal to {{count}}",
-      "sumOfNumbersMustBeEven": "Sum of numbers must be be even"
+      "sumOfNumbersMustBeEven": "Sum of numbers must be be even",
+      "passwordAlreadyTaken": "The password is already taken by another user"
     },
     "passwordWeak": "Weak",
     "passwordOkay": "Okay",
     "passwordVeryStrong": "Strong"
+  },
+  "genders": {
+    "alien": "Alien",
+    "chymera": "Chymera",
+    "cyborg": "Cyborg",
+    "female": "Female",
+    "male": "Male",
+    "other": "Other",
+    "robot": "Robot"
+  },
+  "date": {
+    "months": [
+      "January",
+      "February",
+      "March",
+      "April",
+      "May",
+      "June",
+      "July",
+      "August",
+      "September",
+      "October",
+      "November",
+      "December"
+    ]
   }
 }
