fix(content-locker): update layout, remove escaping element

--- a/public/locales/en/content_limiter.json
+++ b/public/locales/en/content_limiter.json
@@ -1,8 +1,8 @@
 {
   "partitional": {
-    "title": "You gott pay a $0.69/hour with 24 months of commitment in order to see the next paragraph.",
+    "title": "You either gotta pay $0.69/hour with 24 months of commitment in order to see the next paragraph or need to keep clicking the secondary button.",
     "disclaimer": "it might not be as secure and legit but that doesn't matter because you can't actually pay on this website.",
     "cta": "Pay! 100% legit and secure",
-    "cancel": "Naaah, I'm good, give me free stuff"
+    "cancel": "Give me free stuff for free"
   }
 }
