feat(newsletter): add experience flag for newsletter modal

--- a/public/locales/en/settings.json
+++ b/public/locales/en/settings.json
@@ -21,6 +21,7 @@
       "deadPixel": "Dead pixel",
       "exitPrompt": "Exit prompt",
       "mockChat": "Mock chat",
+      "newsletterModal": "Newsletter modal",
       "pageTitleInactiveArrayPaged": "Alternative title when tab is inactive",
       "searchDelay": "Fake search delay",
       "wheelOfFortune": "Wheel of fortune"
