feat(notification): add toggle for notification experiment

--- a/public/locales/en/settings.json
+++ b/public/locales/en/settings.json
@@ -22,6 +22,7 @@
       "exitPrompt": "Exit prompt",
       "mockChat": "Mock chat",
       "newsletterModal": "Newsletter modal",
+      "notifications": "Notifications",
       "pageTitleInactiveArrayPaged": "Alternative title when tab is inactive",
       "searchDelay": "Fake search delay",
       "wheelOfFortune": "Wheel of fortune"
