--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -37,6 +37,7 @@
     "title": "Share this page",
     "description": "Spread the misery! Be sure to inflict this painfully obnoxious website on your friends too — why suffer alone when you can drag them down with you?"
   },
+  "cookieConsent": "This website uses cookies to ensure you get the best experience on our website. It's also a joke so many of the features are buggy or doens't even work on purpose. You can customize your experience and cookie settings in the settings menu.",
   "themeSwitch": {
     "label": "Switch theme",
     "darkMode": "Dark mode",
