fix(a11y): add missing area labels for search and wheel of fortune

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -16,7 +16,8 @@
     "login": "Login",
     "ok": "OK",
     "send": "Send",
-    "share": "Share"
+    "share": "Share",
+    "search": "Search"
   },
   "status": {
     "notSet": "Not set",
