chore(state): add gift flaps to experience toggles

--- a/public/locales/en/settings.json
+++ b/public/locales/en/settings.json
@@ -16,6 +16,9 @@
       "locationPermission": "Location permission"
     },
     "experienceFlags": {
+      "gifts": {
+        "flaps": "Background flaps"
+      },
       "title": "Experience",
       "contentPaywall": "Content paywall",
       "deadPixel": "Dead pixel",
