fix(articles): add missing translation for article strings

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -199,5 +199,9 @@
       "meme and toad",
       "bog brother"
     ]
+  },
+  "article": {
+    "coverImage": "Cover image",
+    "published": "Published at {{date}}"
   }
 }
