feat(runtime): add navigation count to runtime state

--- a/public/locales/en/settings.json
+++ b/public/locales/en/settings.json
@@ -38,6 +38,7 @@
       "startedAgo": "Started:",
       "visibilitySeconds": "Elapsed seconds:",
       "isDocumentVisible": "Is this window in focus?",
+      "navigationCount": "Navigation count:",
       "interactionUnlocked": "Had first interaction?"
     }
   }
