feat(design): cleanup top level issues with the design (#81)
* chore(state): add gift flaps to experience toggles

* feat(settings): add toggle all experience on or off

* feat(design): update theme variables and align components

* feat(footer): add ai disclose and copyright info

* feat(design): add color profiles to TextInput

* feat(design): make MAW in the header text colored

* feat(design): update link colors

* fix(articles): add missing translation for article strings

* feat(design): split dark and light theme into their own file

* feat(design): add dedicated border color variants

* fix(design): notification confirm modal alignment on mobile

* fix(auth): prevent phone number triggering form submit

* feat(design): make header dark mode toggle larger

* feat(design): skin for checkbox

* feat(runtime): add navigation count to runtime state

* feat(checkbox): add stories for checkbox comp

* feat(design): add default typography docs

* feat(design): add icon stories

* chore(docs): update goals

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,9 @@
   "meta": {
     "title": "The Most Annoying Website",
     "description": "Self-proclaimed most annoying website on the web with so many disgusting features of modern websites you might even vomit at some point.",
-    "recruiting": "The content of this page is absolutely free for everyone. Heck, you can even access the source code on <linkTag>GitHub</linkTag>. And... You know what? You can even contribute your of stuff as well."
+    "recruiting": "Want to extend what you see here? Visit our <linkTag>GitHub</linkTag> repo to get started.",
+    "aiDisclose": "AI text and image generation was used to produce contents of this website.",
+    "copyright": "Copyright © {{year}} The Most Annoying Website"
   },
   "response": {
     "yes": "Yes",
@@ -12,12 +14,16 @@
     "accept": "Accept",
     "cancel": "Cancel",
     "close": "Close",
+    "disable": "Disable",
+    "disableAll": "Disable all",
     "dismiss": "Dismiss",
+    "enable": "Enable",
+    "enableAll": "Enable all",
     "login": "Login",
     "ok": "OK",
+    "search": "Search",
     "send": "Send",
-    "share": "Share",
-    "search": "Search"
+    "share": "Share"
   },
   "status": {
     "notSet": "Not set",
@@ -193,5 +199,9 @@
       "meme and toad",
       "bog brother"
     ]
+  },
+  "article": {
+    "coverImage": "Cover image",
+    "published": "Published at {{date}}"
   }
 }
