feat(gifts): add one by one flag and remove dedicated translation

--- a/public/locales/en/settings.json
+++ b/public/locales/en/settings.json
@@ -18,7 +18,8 @@
     },
     "experienceFlags": {
       "gifts": {
-        "flaps": "Background flaps"
+        "flaps": "Background ad flaps",
+        "oneByOne": "One by one ad blocks"
       },
       "title": "Experience",
       "contentPaywall": "Content paywall",
