feat(gifts): add dilf base files

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -203,5 +203,14 @@
   "article": {
     "coverImage": "Cover image",
     "published": "Published at {{date}}"
+  },
+  "gifts": {
+    "dilf": {
+      "title": "DILF",
+      "fullTitle": "DILF - Donut I'd Like to Feast On",
+      "description": "If you're searching for the tastiest, hottest, singlest and most irresistible donuts in your area, you're in the perfect place. Are you ready to take on the challenge of finding your true love? Click on any of the donuts here to discover which one is meant for you.",
+      "flapLeft": "DILF. Hot single donuts in your area",
+      "flapRight": "DILF. Tastiest donuts in your proximity"
+    }
   }
 }
