--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -31,6 +31,7 @@
   },
   "navigation": {
     "contact": "Contact",
+    "donate": "Donate",
     "home": "Home",
     "hotThings": "Hot things",
     "login": "Login",
@@ -215,5 +216,10 @@
     "wanPhone": {
       "title": "Congratulations! You've wan a phone!"
     }
+  },
+  "donate": {
+    "title": "Donations",
+    "description": "This is one feature that actually supposed to work. If you'd like to help support the project or the authors, you can donate here. Every donation helps. We appreciate your support!",
+    "donateLink": "Donation info here"
   }
 }
