feat(gift): revamp fake advertisements  (#85)
* feat(gifts): add one by one flag and remove dedicated translation

* feat(gifts): add dilf base files

* feat(gifts): add footer self promo

* feat(gifts): add wan phone dummy page

* feat(gifts): add donation to menu

* feat(gifts): default to dark for container gift flap

* feat(gifts): add working dilf map

* feat(gifts): add survey dislaimer to flaim wan phone

* feat(gifts): fix dilf link

* fix(gifts): one by one toggle

* feat(gifts): add dilf to main nav

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -31,6 +31,7 @@
   },
   "navigation": {
     "contact": "Contact",
+    "donate": "Donate",
     "home": "Home",
     "hotThings": "Hot things",
     "login": "Login",
@@ -203,5 +204,22 @@
   "article": {
     "coverImage": "Cover image",
     "published": "Published at {{date}}"
+  },
+  "gifts": {
+    "dilf": {
+      "title": "DILF",
+      "fullTitle": "DILF - Donut I'd Like to Feast On",
+      "description": "If you're searching for the tastiest, hottest, singlest and most irresistible donuts in your area, you're in the perfect place. Are you ready to take on the challenge of finding your true love? Click on any of the donuts here to discover which one is meant for you.",
+      "flapLeft": "DILF. Hot single donuts in your area",
+      "flapRight": "DILF. Tastiest donuts in your proximity"
+    },
+    "wanPhone": {
+      "title": "Congratulations! You've wan a phone!"
+    }
+  },
+  "donate": {
+    "title": "Donations",
+    "description": "This is one feature that actually supposed to work. If you'd like to help support the project or the authors, you can donate here. Every donation helps. We appreciate your support!",
+    "donateLink": "Donation info here"
   }
 }
